--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -32,3 +32,15 @@
 .toolbar_nav_items a:active{
   color: orange;
 }
+
+@media (max-width: 768px){
+  .toolbar_nav_items{
+    display: none;
+  }
+}
+
+@media(min-width:769px){
+  .toolbar-toggle-button{
+    display: none;
+  }
+}
